--- a/resources/scss/components/06_header.scss
+++ b/resources/scss/components/06_header.scss
@@ -68,7 +68,7 @@
                     transition: 0.3s all ease-in-out;
                     color: var(--light-gray) !important;
 
-                    &:hover, &.router-link-active, &.router-link-exact-active {
+                    &:hover, &.active {
                         transition: 0.3s all ease-in-out;
                         color: var(--theme) !important;
                     }
